<?xml version="1.0"?>
<package format="2">
  <name>itri_msgs</name>
  <version>0.0.0</version>
  <description>Messages used by SDC packages</description>
  <maintainer email="itriA30220@itri.org.tw">Andrey Krainyak</maintainer>
  <license>ITRI</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>
