<?xml version="1.0"?>
<package format="2">
    <name>keyboard_control</name>
    <version>0.0.0</version>
    <description>The keyboard_constrol package</description>
    <maintainer email="mxwu@itri.org.tw">mxwu</maintainer>
    <license>ITRI</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>itri_msgs</depend>
</package>
