<?xml version="1.0"?>
<package format="2">
    <name>ndt2veh</name>
    <version>0.0.0</version>
    <description>enhance ndt pose frequency from 10 to 100 Hz
        using unscented Kalman filter</description>
    <maintainer email="mxwu@itri.org.tw">MingXuanWu</maintainer>
    <license>ITRI</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>geometry_msgs</depend>
    <depend>itri_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>roscpp</depend>
</package>
