<?xml version="1.0"?>
<package format="2">
    <name>sdc</name>
    <version>1.0.0</version>
    <description>Self-Driving Car</description>
    <maintainer email="itriA30220@itri.org.tw">Andrey Krainyak</maintainer>
    <license>ITRI</license>
    <buildtool_depend>catkin</buildtool_depend>
</package>
