<?xml version="1.0"?>
<package format="2">
  <name>vehicle_gateway</name>
  <version>1.0.0</version>
  <description>
  CAN BUS signals between ROS infrastructure and Truck Vechicle Control Unit
  </description>
  <maintainer email="itriA30220@itri.org.tw">Andrey Krainyak</maintainer>
  <license>ITRI</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>itri_msgs</depend>
  <depend>trace</depend>
</package>
