<?xml version="1.0"?>
<package format="2">
    <name>waypoint_follower</name>
    <version>0.0.0</version>
    <description>The waypoint_follower package</description>
    <maintainer email="mxwu@itri.org.tw">MingXuanWu</maintainer>
    <license>ITRI</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>itri_msgs</depend>
    <depend>trace</depend>
    <depend>sensor_msgs</depend>
</package>
