<?xml version="1.0"?>
<package format="2">
    <name>localization_analysis</name>
    <version>0.0.0</version>
    <description>The localization_analysis package</description>

    <maintainer email="Dennis.Lu@itri.org.tw">Dennis Lu</maintainer>

    <license>ITRI</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_export_depend>rospy</build_export_depend>
    <exec_depend>rospy</exec_depend>

    <export></export>
</package>
