<?xml version="1.0"?>
<package>
  <name>localizer</name>
  <version>1.6.1</version>
  <description>The localizer package</description>
  <maintainer email="dennis.lu@itri.org.tw">Dennis Lu</maintainer>
  <maintainer email="yusyuan_liao@itri.org.tw">Yu-Syuan Liao</maintainer>
  <license>ITRI</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <build_depend>itri_msgs</build_depend>
  <build_depend>vehicle_gateway</build_depend>
  <build_depend>common</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>eigen3</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>
  <run_depend>itri_msgs</run_depend>
  <run_depend>common</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>eigen3</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
