<?xml version="1.0"?>
<package format="2">
  <name>nmea2pose</name>
  <version>0.0.0</version>
  <description>The nmea2pose package</description>

  <maintainer email="yusyuan_liao@itri.org.tw">Yu-Syuan Liao</maintainer>
  <license>ITRI</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trace</build_depend>
  <build_export_depend>nmea_msgs</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>trace</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
