<?xml version="1.0"?>
<package format="2">
  <name>pointmap_loader</name>
  <version>0.0.0</version>
  <description>The pointmap_loader package</description>

  <maintainer email="yusyuan_liao@itri.org.tw">Yu-Syuan Liao</maintainer>
  <license>ITRI</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>itri_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>itri_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
