<?xml version="1.0"?>
<package format="2">
    <name>pose_tracker</name>
    <version>0.0.0</version>
    <description>The pose_tracker package</description>

    <maintainer email="Dennis.Lu@itri.org.tw">Dennis Lu</maintainer>

    <license>ITRI</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export></export>
</package>
